# MLOps-project

./: .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/dataset/: dataset.yaml
conf/mlflow/: mlflow.yaml
conf/training/: training.yaml
data/: test.dvc  train.dvc
skin-diseases/: constants.py  dataset.py  infer.py  metrics.py  train.py
