[tool.poetry]
name = "skin-diseases"
version = "0.1.0"
description = "MLOps-homework"
authors = ["Kirill Filatov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
torchmetrics = "^1.6.1"
torchvision = "0.16.2"
fastapi = "^0.115.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
