[tool.poetry]
name = "skin-diseases"
version = "0.1.0"
description = "MLOps-homework"
authors = ["Kirill Filatov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.1.2"
torchmetrics = "^1.6.1"
torchvision = "0.16.2"
fastapi = "^0.115.6"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
mlflow = "^2.19.0"


[tool.poetry.group.dev.dependencies]
dvc = "^3.58.0"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
